Gemfileに基づきアップデート

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,5 @@
 <div class="ml-3">
   <h1>My Profile</h1>
-  <p>Joey Yuasa</p>
 </div>
 <div class="row">
   <div class="col-sm-4">
@@ -10,6 +9,7 @@
   </div>
 
   <div class="col-sm-8">
+    <h3><strong>Joey Yuasa (26)</strong></h3>
     <h4>経歴</h4>
     <p>早稲田大学文化構想学部同学科の文芸ジャーナリズム論系を卒業後、新卒でNTTデータシステム技術に入社し、金融基幹系システムの更改チームに二年間所属した。</p>
     <p>その後、IBMハッカソンを通じて「やっぱり開発がやりたい！」と思い立ち転職を決意。現在鋭意転職活動中の身である。</p>
