Profileページと作品集ページを作成。ヘッダーを作成。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,6 @@
 
   <header>
     <div class="pos-f-t">
-      <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
-          <h5 class="text-white h4"></h5>
-          <span class="text-muted">Toggleable via the navbar brand.</span>
-        </div>
-      </div>
       <nav class="navbar navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,6 +18,37 @@
       </nav>
     </div>
   </header>
+
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <div class="row">
+        <div class="col-sm-3">
+          <h5>
+            <%= link_to("Profile", "/", class:"text-white h4 text-light") %>
+          </h5>
+          <span class="text-muted">簡単な経歴と自己紹介</span>
+        </div>
+        <div class="col-sm-3">
+          <h5>
+            <%= link_to("Art", "art", class:"text-white h4 text-light") %>
+          </h5>
+          <span class="text-muted">作品集</span>
+        </div>
+        <div class="col-sm-3">
+          <h5>
+            <%= link_to("Contact", "/", class:"text-white h4 text-light") %>
+          </h5>
+          <span class="text-muted">先立つもの</span>
+        </div>
+        <div class="col-sm-3">
+          <h5>
+            <%= link_to("Tweets", "/", class:"text-white h4 text-light") %>
+          </h5>
+          <span class="text-muted">近況（随時更新）</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <body>
