デプロイ準備

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,18 +34,18 @@
           </h5>
           <span class="text-muted">作品集</span>
         </div>
-        <div class="col-sm-3">
+        <!-- <div class="col-sm-3">
           <h5>
-            <%= link_to("Contact", "/", class:"text-white h4 text-light") %>
+            <%# <%= link_to("Contact", "/", class:"text-white h4 text-light") %> %>
           </h5>
           <span class="text-muted">先立つもの</span>
         </div>
         <div class="col-sm-3">
           <h5>
-            <%= link_to("Tweets", "/", class:"text-white h4 text-light") %>
+            <%# <%= link_to("Tweets", "/", class:"text-white h4 text-light") %> %>
           </h5>
           <span class="text-muted">近況（随時更新）</span>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
