--- a/app/views/pages/art.html.erb
+++ b/app/views/pages/art.html.erb
@@ -16,7 +16,7 @@
           <p class="card-text">Kotlinにて作成したAndroidアプリ（未完成）。制作期間は1ヶ月。</p>
           <p class="card-text">ラーメンを食べ過ぎてしまう人たちのために、1ヶ月に食べられるラーメンの量を制限する健康管理アプリ。</p>
           <p class="card-text">まだ実装できていない「ヘルプ」をそろそろ実装したい。</p>
-          <%= link_to("ダウンロードはこちら", "/", class:"btn btn-primary") %>
+          <%= link_to("ダウンロードはこちら", "https://dply.me/jl8o1i", target:["_blank"], class:"btn btn-primary") %>
         </div>
       </div>
     </div>
