スペル修正

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -38,7 +38,7 @@
           <p>・Kotlin 3か月の使用経験あり</p>
           <p>・AndroidStudioを用いたアプリ開発経験あり</p>
           <p>・Python　業務効率化ツールの作成やハッカソンでの使用経験あり</p>
-          <p>・ruby、ruby on rails、bootstrap、herokにてこのページは作成しています。</p>
+          <p>・ruby、ruby on rails、bootstrap、herokuにてこのページは作成しています。</p>
         </div>
       </div>
 
