ヘッダ修正

--- a/app/views/pages/art.html.erb
+++ b/app/views/pages/art.html.erb
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="card" style="width: 20rem;">
         <%= image_tag("iramen.jpg", class:"bd-placeholder-img card-img-top") %>
           <title>i-Ramen</title>
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="card" style="width: 20rem;">
         <%= image_tag("Octocat.jpg", class:"bd-placeholder-img card-img-top") %>
           <title>GitHub</title>
@@ -34,6 +34,5 @@
         </div>
       </div>
     </div>
-  </div>
   </div>
 </div>
