--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,31 +22,33 @@
 
   <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
-      <div class="row">
-        <div class="col-sm-3">
-          <h5>
-            <%= link_to("Profile", "/", class:"text-white h4 text-light") %>
-          </h5>
-          <span class="text-muted">簡単な経歴と自己紹介</span>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-3">
+            <h5>
+              <%= link_to("Profile", "/", class:"text-white h4 text-light") %>
+            </h5>
+            <span class="text-muted">簡単な経歴と自己紹介</span>
+          </div>
+          <div class="col-sm-3">
+            <h5>
+              <%= link_to("Art", "art", class:"text-white h4 text-light") %>
+            </h5>
+            <span class="text-muted">作品集</span>
+          </div>
+          <!-- <div class="col-sm-3">
+            <h5>
+              <%# <%= link_to("Contact", "/", class:"text-white h4 text-light") %> %>
+            </h5>
+            <span class="text-muted">先立つもの</span>
+          </div>
+          <div class="col-sm-3">
+            <h5>
+              <%# <%= link_to("Tweets", "/", class:"text-white h4 text-light") %> %>
+            </h5>
+            <span class="text-muted">近況（随時更新）</span>
+          </div> -->
         </div>
-        <div class="col-sm-3">
-          <h5>
-            <%= link_to("Art", "art", class:"text-white h4 text-light") %>
-          </h5>
-          <span class="text-muted">作品集</span>
-        </div>
-        <!-- <div class="col-sm-3">
-          <h5>
-            <%# <%= link_to("Contact", "/", class:"text-white h4 text-light") %> %>
-          </h5>
-          <span class="text-muted">先立つもの</span>
-        </div>
-        <div class="col-sm-3">
-          <h5>
-            <%# <%= link_to("Tweets", "/", class:"text-white h4 text-light") %> %>
-          </h5>
-          <span class="text-muted">近況（随時更新）</span>
-        </div> -->
       </div>
     </div>
   </div>
@@ -56,5 +58,5 @@
       <%= yield %>
     </body>
   </div>
-  
+
 </html>
