ogメッセージの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Portfolio</title>
+    <meta property="og:description" content="JoeyYuasaの名刺です。ご一読ください。" />
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
