いいねボタンの実装

--- a/app/views/pages/art.html.erb
+++ b/app/views/pages/art.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-  <div class="ml-1">
+  <div class="ml-1 pb-3">
     <h1>My Art</h1>
-    <br></br>
   </div>
 </div>
 <div class="container">
