--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -7,7 +7,7 @@
       <div class="ml-1 mr-1">
         <div class="pb-1">
           <div id="like">
-            <%= render'pages/ajax_like', item:@isLike %>
+            <%= render'pages/ajax_like' %>
           </div>
           <div class="text-muted">
             応援が励みになります！
